code generator setup

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -229,7 +229,7 @@
     "Events": "Новости",
     "Feedback": "Отзывы",
     "Positions": "Должности",
-    "Working hours": "Рабочие часы",
+    "Working_hours": "Рабочие часы",
     "Clinics": "Клиники",
     "Staff": "Сотрудники",
     "Documents": "Документы",
