--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -225,7 +225,7 @@
     "You are receiving this email because we received a password reset request for your account.": "Вы получили это письмо, потому что мы получили запрос на сброс пароля для Вашей учётной записи.",
     "Users": "Пользователи",
     "Services": "Услуги",
-    "Discounts": "Скидки",
+    "Discounts": "Акции",
     "Events": "Новости",
     "Feedback": "Отзывы",
     "Positions": "Должности",
@@ -233,5 +233,8 @@
     "Clinics": "Клиники",
     "Staff": "Сотрудники",
     "Documents": "Документы",
-    "Categories": "Категории"
+    "Categories": "Категории",
+    "Doctor": "Врач",
+    "Nurse": "Медсестра/медбрат",
+    "Administrator": "Руководство"
 }
