--- a/todo
+++ b/todo
@@ -1,2 +1,5 @@
 js для файлов новостей и сотрудников
-нормальный select multiple где нужно
+
+фильтр и сортировка индексов ресурсов
+в записи расписания вся неделя или только 1 день
+исправить запросы расписания в представлениях
