index filtering done

--- a/todo
+++ b/todo
@@ -1,5 +1,6 @@
-js для файлов новостей и сотрудников
+js для файлов новостей и сотрудников - done
+фильтр и сортировка индексов ресурсов - done
+исправить запросы расписания в представлениях - done
 
-фильтр и сортировка индексов ресурсов
 в записи расписания вся неделя или только 1 день
-исправить запросы расписания в представлениях
+валидация расписания
