main page frontend pc transfer

--- a/todo
+++ b/todo
@@ -4,3 +4,5 @@ js для файлов новостей и сотрудников - done
 
 в записи расписания вся неделя или только 1 день
 валидация расписания
+
+валидация времени - ночное время?
