--- a/todo
+++ b/todo
@@ -6,3 +6,17 @@ js для файлов новостей и сотрудников - done
 валидация расписания
 
 валидация времени - ночное время?
+
+спросить о размерах базы данных
+- сотрудники: 12-20
+- услуги и прайсы: в мэйле
+сделать нормальную тестовую базу данных
+переименовать категории
+платформа
+количество просмотров сайта если можно
+номера телефонов и адреса сверху - не нужны
+руководство - только главрач
+о нас и контакты - с сайта юургу
+цветовая схема сайта должна соответствовать логотипу - логотип пришлют
+должны быть ссылки на органы - названия органов в блокноте, также посмотреть их в приказе
+в расписании не должно быть медсотрудников
