--- a/todo
+++ b/todo
@@ -18,5 +18,12 @@ js для файлов новостей и сотрудников - done
 руководство - только главрач
 о нас и контакты - с сайта юургу
 цветовая схема сайта должна соответствовать логотипу - логотип пришлют
-должны быть ссылки на органы - названия органов в блокноте, также посмотреть их в приказе
+должны быть ссылки на органы - названия органов в блокноте, также посмотреть их в приказе:
+
+1. Роспотребнадзор по челябинской области и российской федерации
+2. министерство здравоохранения по челябинской области и российской федерации
+3. росздравнадзор
+4. прокуратура челябинской области и российской федерации
+
 в расписании не должно быть медсотрудников
+
