license link + depots links + pinned footer

--- a/todo
+++ b/todo
@@ -27,3 +27,7 @@ js для файлов новостей и сотрудников - done
 
 в расписании не должно быть медсотрудников
 
+23.05.24
+спросить про документы - будут ли их добавлять
+спросить про страницу с руководством - оставить фиксированное или выводить всех с тегом "руководство"
+
