--- a/todo
+++ b/todo
@@ -28,6 +28,25 @@ js для файлов новостей и сотрудников - done
 в расписании не должно быть медсотрудников
 
 23.05.24
+осталось:
+ - интерактивная карта адресов (если получится)
+ - количество посещений (если получится) 
+ - режим для слабовидящих
+ - правки дизайна
+ - правки интерфейса (расписание, модерация, ... - так себе)
+ - дэшборд панели админа
+ - не более 1-3 непроверенных отзывов от одного и того же мейла
 спросить про документы - будут ли их добавлять
 спросить про страницу с руководством - оставить фиксированное или выводить всех с тегом "руководство"
+спросить про привязку отзывов к мэйлам - если оставить, спросить про политику конфиденциальности - если убрать, возразить об отсутствии привязки
 
+!!!ХОСТИНГ И ПЛАТФОРМА!!!
+
+интервью 23.05
+- выделить кнопки навигационной панели
+- СПРОСИТЬ ПРО ХОСТИНГ И ПОЗВОНИТЬ С.Ф.
+- редактирование окон: "о нас", "руководство", "контакты"
+- редактирование ссылок
+- кнопку с документами (лицензия всегда в футере)
+- ограничение на отзывы: 1 непроверенный отзыв от 1 мэйла
+- письмо на мэйл Центра о каждом отзыве
