about + contacts + license + links redactable

--- a/todo
+++ b/todo
@@ -50,3 +50,10 @@ js для файлов новостей и сотрудников - done
 - кнопку с документами (лицензия всегда в футере)
 - ограничение на отзывы: 1 непроверенный отзыв от 1 мэйла
 - письмо на мэйл Центра о каждом отзыве
+
+25.05.24
+осталось:
+ - нормально настроить Quill
+ - нормальное подтверждение удаления пользователя
+спросить:
+ - только пдф в лицензии или нет
