--- a/todo
+++ b/todo
@@ -55,5 +55,6 @@ js для файлов новостей и сотрудников - done
 осталось:
  - нормально настроить Quill
  - нормальное подтверждение удаления пользователя
+ - флаг "оставить файл" не работает
 спросить:
  - только пдф в лицензии или нет
