mail smtp *kinda* works - spam problem favicon added

--- a/todo
+++ b/todo
@@ -43,11 +43,11 @@ js для файлов новостей и сотрудников - done
 !!!ХОСТИНГ И ПЛАТФОРМА!!!
 
 интервью 23.05
-- выделить кнопки навигационной панели
-- СПРОСИТЬ ПРО ХОСТИНГ И ПОЗВОНИТЬ С.Ф.
-- редактирование окон: "о нас", "руководство", "контакты"
-- редактирование ссылок
-- кнопку с документами (лицензия всегда в футере)
+- выделить кнопки навигационной панели - ок
+- СПРОСИТЬ ПРО ХОСТИНГ И ПОЗВОНИТЬ С.Ф. - ок
+- редактирование окон: "о нас", "руководство", "контакты" - ок
+- редактирование ссылок - ок
+- кнопку с документами (лицензия всегда в футере) - ок
 - ограничение на отзывы: 1 непроверенный отзыв от 1 мэйла
 - письмо на мэйл Центра о каждом отзыве
 
@@ -55,6 +55,7 @@ js для файлов новостей и сотрудников - done
 осталось:
  - нормально настроить Quill
  - нормальное подтверждение удаления пользователя
- - флаг "оставить файл" не работает
+ - флаг "оставить файл" не работает - ок
+ - сообщения об успехе операции
 спросить:
  - только пдф в лицензии или нет
