--- a/todo
+++ b/todo
@@ -57,5 +57,6 @@ js для файлов новостей и сотрудников - done
  - нормальное подтверждение удаления пользователя
  - флаг "оставить файл" не работает - ок
  - сообщения об успехе операции
+ - решить проблему со спамом smtp - другие драйвера платные и без подходящего бесплатного тарифа
 спросить:
  - только пдф в лицензии или нет
