--- a/todo
+++ b/todo
@@ -58,5 +58,6 @@ js для файлов новостей и сотрудников - done
  - флаг "оставить файл" не работает - ок
  - сообщения об успехе операции
  - решить проблему со спамом smtp - другие драйвера платные и без подходящего бесплатного тарифа
+ - стиль текста Quill не соотносится к итогом на сайте
 спросить:
  - только пдф в лицензии или нет
