--- a/todo
+++ b/todo
@@ -59,5 +59,8 @@ js для файлов новостей и сотрудников - done
  - сообщения об успехе операции
  - решить проблему со спамом smtp - другие драйвера платные и без подходящего бесплатного тарифа
  - стиль текста Quill не соотносится к итогом на сайте
+ - аутентификация
+ - модерация. возможность удалять старые отзывы? автоматическое удаление старых отзывов?
+ - проверить масштабируемость картинок
 спросить:
  - только пдф в лицензии или нет
