pre-submission fixes

--- a/todo
+++ b/todo
@@ -64,3 +64,11 @@ js для файлов новостей и сотрудников - done
  - проверить масштабируемость картинок
 спросить:
  - только пдф в лицензии или нет
+
+
+
+- crud пользователей недоделан - пока скрыл
+- хлебные крошки
+- возврат на конкретную страницу пагинация
+- цвет кнопок на панели администратора
+- валидация дат
