api postman testing

--- a/todo
+++ b/todo
@@ -72,3 +72,4 @@ js для файлов новостей и сотрудников - done
 - возврат на конкретную страницу пагинация
 - цвет кнопок на панели администратора
 - валидация дат
+- изменение расписания - ломается сравнение времени при 8:00:00 или тп
