--- a/todo
+++ b/todo
@@ -68,8 +68,8 @@ js для файлов новостей и сотрудников - done
 
 
 - crud пользователей недоделан - пока скрыл
-- хлебные крошки
+- хлебные крошки - ок
 - возврат на конкретную страницу пагинация
-- цвет кнопок на панели администратора
+- цвет кнопок на панели администратора - ок
 - валидация дат
 - изменение расписания - ломается сравнение времени при 8:00:00 или тп
