--- a/todo
+++ b/todo
@@ -29,13 +29,13 @@ js для файлов новостей и сотрудников - done
 
 23.05.24
 осталось:
- - интерактивная карта адресов (если получится)
+ - интерактивная карта адресов (если получится) - не получится
  - количество посещений (если получится) 
  - режим для слабовидящих
- - правки дизайна
+ - правки дизайна - ок
  - правки интерфейса (расписание, модерация, ... - так себе)
  - дэшборд панели админа
- - не более 1-3 непроверенных отзывов от одного и того же мейла
+ - не более 1-3 непроверенных отзывов от одного и того же мейла - ok
 спросить про документы - будут ли их добавлять
 спросить про страницу с руководством - оставить фиксированное или выводить всех с тегом "руководство"
 спросить про привязку отзывов к мэйлам - если оставить, спросить про политику конфиденциальности - если убрать, возразить об отсутствии привязки
@@ -48,28 +48,26 @@ js для файлов новостей и сотрудников - done
 - редактирование окон: "о нас", "руководство", "контакты" - ок
 - редактирование ссылок - ок
 - кнопку с документами (лицензия всегда в футере) - ок
-- ограничение на отзывы: 1 непроверенный отзыв от 1 мэйла
-- письмо на мэйл Центра о каждом отзыве
+- ограничение на отзывы: 1 непроверенный отзыв от 1 мэйла - ок
+- письмо на мэйл Центра о каждом отзыве - ок
 
 25.05.24
 осталось:
  - нормально настроить Quill
  - нормальное подтверждение удаления пользователя
  - флаг "оставить файл" не работает - ок
- - сообщения об успехе операции
+ - сообщения об успехе операции - ок
  - решить проблему со спамом smtp - другие драйвера платные и без подходящего бесплатного тарифа
  - стиль текста Quill не соотносится к итогом на сайте
  - аутентификация
- - модерация. возможность удалять старые отзывы? автоматическое удаление старых отзывов?
- - проверить масштабируемость картинок
+ - модерация. возможность удалять старые отзывы? автоматическое удаление старых отзывов? - ок
+ - проверить масштабируемость картинок - ок
 спросить:
- - только пдф в лицензии или нет
+ - только пдф в лицензии или нет - ок
 
 
 
 - crud пользователей недоделан - пока скрыл
 - хлебные крошки - ок
-- возврат на конкретную страницу пагинация
+- возврат на конкретную страницу пагинация - потом
 - цвет кнопок на панели администратора - ок
-- валидация дат
-- изменение расписания - ломается сравнение времени при 8:00:00 или тп
