--- a/todo
+++ b/todo
@@ -71,3 +71,9 @@ js для файлов новостей и сотрудников - done
 - хлебные крошки - ок
 - возврат на конкретную страницу пагинация - потом
 - цвет кнопок на панели администратора - ок
+
+
+- пользователи:
+ - если забыл пароль?
+ - подтверждение мэйла?
+ - 
